syntax = "proto3";

import "v1/message.proto";

package internal.client.p2p.proto.v1;

option go_package = "github.com/symbioticfi/relay/internal/client/p2p/proto/v1";



service SymbioticP2PService {
  rpc WantSignatures(WantSignaturesRequest) returns (WantSignaturesResponse);
  rpc WantAggregationProofs(WantAggregationProofsRequest) returns (WantAggregationProofsResponse);

}

message WantSignaturesRequest {
  // Map of request hash to bitmap of wanted validator indices
  map<string, bytes> want_signatures = 1;  // key: hex string of common.Hash, value: roaring bitmap bytes
}

message WantSignaturesResponse {
  // Map of request hash to list of validator signatures
  map<string, ValidatorSignatureList> signatures = 2;  // key: hex string of common.Hash
}


// ValidatorSignatureList contains a list of validator signatures for a specific request
message ValidatorSignatureList {
  repeated ValidatorSignature signatures = 1;
}

// ValidatorSignature pairs a signature with its validator index
message ValidatorSignature {
  uint32 validator_index = 1;
  SignatureExtended signature = 2;
}

// SignatureExtended represents extended signature data
message SignatureExtended {
  bytes message_hash = 1;
  bytes signature = 2;
  bytes public_key = 3;
}

message WantAggregationProofsRequest {
  // List of request hashes for which aggregation proofs are needed
  repeated string request_hashes = 1;  // hex strings of common.Hash
}

message WantAggregationProofsResponse {
  // Map of request hash to aggregation proof
  map<string, AggregationProof> proofs = 1;  // key: hex string of common.Hash
}
